css/style.css
@import url('https://fonts.googleapis.com/css?family=Raleway');

html, body {
    margin: 0;
}

body {
    font-family: 'Raleway', sans-serif;
    color: #221;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

p {
    color: #777;
}

h1, h2, h3 {
    letter-spacing: 1px;
}

/*
Adding a cool underline effect on links 
as described here http://tobiasahlin.com/blog/css-trick-animating-link-underlines/
*/
a {
    color:#0073E0;
    text-decoration: none;
    display: inline-block;
}

.animated_underline {
    position: relative;
    font-weight: bold;
}

.animated_underline:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #0073E0;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.2s ease-in-out 0s;
    transition: all 0.2s ease-in-out 0s;
}

.animated_underline:hover:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}

.header {
    position: relative;
    height: 80vh;
    overflow: hidden;
    background-color: #320734;
}

.header_background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #320734;
}

.header_background:after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
    background-image: url('../img/cc960.png');
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.castleCodingCanvas {
    width: 100%;
    height: 100%;
    background: #2d0730;
}

.main_content {
    padding: 20px;
    max-width: 500px;
    margin: 0 auto;
    text-align: center
}

.headline_icon {
    height: 24px;
    margin-bottom: -2px;
}

.largeEmojis {
    font-size: 72px;
    margin: 30px 0;
}

.spegelsalen {
    display: block;
    width: 100%;
    max-width: 400px;
    margin: 0 auto;
}

.separator {
    color: #a44599;
    margin: 40px auto;
    line-height: 2px;
    max-width: 240px;
    text-align: center;
    position: relative;
}

.separator:before, .separator:after {
    display: block;
    width: 40%;
    content: "";
    border: 1px solid #a44599;
    border-radius: 2px;
}

.separator:before {
    float: left;
}

.separator:after {
    float: right;
}

.links_content {
    padding: 20px;
    text-align: center
}

.footer_content {
    padding: 20px;
}

/*
    Google Maps stuff below
*/

.mapwrapper {
    position: relative;
}

.mapoverlay {
    position: absolute;
    text-align: left;
    bottom: 25px;
    left: 25px;
    background-color: #fff;
    padding: 20px;
    z-index: 2;
    border-radius: 3px;
    transition: transform .3s
}

.mapoverlay:hover {
    transform: scale(1.05);
    box-shadow: 0 10px 30px hsla(0, 0%, 0%, 0.19), 0 6px 10px hsla(0, 0%, 0%, 0.23);
}

#sponsor {
    padding-top: 20px; 
    margin-bottom: 10px;
}

.card_container {
    display: flex;
    justify-content: center;
    text-align: center;
}

.card_container h2 {
    width: 100%;
}

.card {
    max-width: 300px;
    margin: 0 20px 20px 20px;
    border-radius: 3px;
    background: #fff;
    overflow: hidden;
    box-shadow: 0 1px 6px hsla(0, 0%, 0%, 0.12), 0 1px 4px hsla(0, 0%, 0%, 0.12);
    transition: transform .3s, box-shadow .2s;
}

.card:hover {
    transform: scale(1.05);
    box-shadow: 0 10px 30px hsla(0, 0%, 0%, 0.19), 0 6px 10px hsla(0, 0%, 0%, 0.23);
}

.card_head {
    min-height: 160px;
    padding: 30px;
    background:#320734;
    color: #ffffff;
}

.card .card_head .card_head_content {
    transition: transform .3s;
}

.card:hover .card_head .card_head_content {
    transform: scale(1.2);
}

.card_icon {
    width: 100%;
    max-width: 100px;
    display: block;
    margin: 0 auto;
}

.card_content {
    height: 50%;
    padding: 20px;
    min-height: 160px;
    color: #999;
    transition: color .3s;
}

.card_content p {
    color: #999;  
}

.card .card_headline {
    margin: 0;
    color: #555;
    transition: color .3s;
}

.card:hover .card_content, .card:hover .card_content p {
    color: #777;
}

.card:hover .card_headline  {
    color: #222;
}

.card_links {
    display: flex;
    justify-content: center;
    text-align: center;
    margin-bottom: 0;
}

.card_links a img {
    width: 30px;
    display: block;
    margin: 0 auto 5px auto;
}

.card_links a {
    margin: 10px;
    font-size: 0.8em;
}

.rainbow_colors {
    background: #eec34a;
    background: -moz-linear-gradient(-45deg, #eec34a 0%, #e7554c 25%, #c04f99 50%, #3f94b4 75%, #11b079 100%);
    background: -webkit-linear-gradient(-45deg, #eec34a 0%,#e7554c 25%,#c04f99 50%,#3f94b4 75%,#11b079 100%);
    background: linear-gradient(135deg, #eec34a 0%,#e7554c 25%,#c04f99 50%,#3f94b4 75%,#11b079 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eec34a', endColorstr='#11b079',GradientType=1 );
}

#googlemap {
    position: relative;
    width: 100%;
    padding-top: 50%;
}

@media screen and (max-width: 700px) {
    /*
    Css inside this media query applies on screens smaller than 700px
    */

    .card_container {
        display: block;
        padding: 0 20px;
    }

    .card {
        margin: 0 auto 20px auto;
    }

}

@media screen and (max-width: 600px) {

    /*
    Css inside this media query applies on screens smallen than 600px
    */
    .header {
        height: 50vh;
    }
    .header_background {
        background-image: url('../img/splash.small.jpg');
    }
    .main_content h1 {
        font-size: 1.5em;
    }
    .main_content h2 {
        font-size: 1.2em;
    }

    .headline_icon {
        height: 20px;
    }

    .largeEmojis {
        font-size: 60px;
    }

    #googlemap {
        padding-top: 90%;
    }
}

@media screen and (max-width: 290px) {
    .card_links {
        display: block;
    }

    .header_background:after {
        background-image: url('../img/cc500.png');
    }

}

